# cc-plugin-to-codex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/codex-spec/: codex-plugins.md  codex-subagents.md
scripts/: smoke-local.sh
skills/cc2codex/: SKILL.md
src/cc_plugin_to_codex/: __init__.py  __main__.py  agent_convert.py  bridge.py  cli.py  interactive.py  log.py  marketplace.py  registry.py  scopes.py  sources.py  sync.py
tests/: conftest.py  test_agent_convert.py  test_bridge.py  test_cli_browse.py  test_cli_list.py  test_cli_sync.py  test_cli_update_uninstall.py  test_e2e_sync.py  test_interactive.py  test_marketplace.py  test_registry.py  test_scopes.py  test_sources.py  test_sync.py
tests/fixtures/: build_bare_marketplace.py
tests/fixtures/bare-marketplace.git/: config  packed-refs
tests/fixtures/src_marketplace/.claude-plugin/: marketplace.json
tests/fixtures/src_marketplace/plugins/demo-a/.claude-plugin/: plugin.json
tests/fixtures/src_marketplace/plugins/demo-a/agents/: helper.md
tests/fixtures/src_marketplace/plugins/demo-a/skills/greet/: SKILL.md
tests/fixtures/src_marketplace/plugins/demo-a/skills/greet/assets/: banner.txt
tests/fixtures/src_marketplace/plugins/demo-a/skills/greet/references/: tone.md
tests/fixtures/src_marketplace/plugins/demo-b/.claude-plugin/: plugin.json
tests/fixtures/src_marketplace/plugins/demo-b/.codex-plugin/: plugin.json
tests/fixtures/src_marketplace/plugins/demo-b/skills/farewell/: SKILL.md
tests/fixtures/src_marketplace/plugins/demo-b/skills/farewell/references/: politeness.md
